test/MC/SVE/regression-tests/negative_tests/sve-ld2w-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32E2Load4LSSZ
// Offset register Rm cannot be xzr
ld2w {z26.s, z27.s}, p2/z, [x15, xzr, lsl #2]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
